Very first finalize version

--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -1292,7 +1292,225 @@
                         </div>
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="muse-id" role="tabpanel" aria-labelledby="muse-tab">
-                        Muse
+                        <div class="row py-5 px-5">
+                            <div class="col-md-6">
+                                <ul class="list-group mb-3">
+                                    <li class="list-group-item d-flex justify-content-between lh-sm©">
+                                        <div>
+                                            <h6 class="my-0">Astuces (SAV)</h6>
+                                            <small class="text-muted">Savvy</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Cognition (COG)</h6>
+                                            <small class="text-muted">Cognition</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Intuition (INT)</h6>
+                                            <small class="text-muted">Intuition</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">R&eacute;flexes (REF)</h6>
+                                            <small class="text-muted">Reflexes</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm©">
+                                        <div>
+                                            <h6 class="my-0">Somatique (SOM)</h6>
+                                            <small class="text-muted">Somatics</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm©">
+                                        <div>
+                                            <h6 class="my-0">Volont&eacute; (WIL)</h6>
+                                            <small class="text-muted">Willpower</small>
+                                        </div>
+                                        <span class="text-muted">20/60</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-5">
+                                    <label for="muse-name" class="form-label">Nom</label>
+                                    <input type="text" class="form-control" id="muse-name" placeholder="Name" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid muse name is required.
+                                    </div>
+                                </div>
+                                <ul class="list-group mb-3">
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Initiative</h6>
+                                            <small class="text-muted">Initiative</small>
+                                        </div>
+                                        <span class="text-muted">6</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Lucidit&eacute;</h6>
+                                            <small class="text-muted">Lucidity</small>
+                                        </div>
+                                        <span class="text-muted">30</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Sant&eacute; mentale</h6>
+                                            <small class="text-muted">Insanity Rating</small>
+                                        </div>
+                                        <span class="text-muted">60</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">Seuil traumatique</h6>
+                                            <small class="text-muted">Trauma Threshold</small>
+                                        </div>
+                                        <span class="text-muted">6</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <hr class="my-4">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th scope="col">
+                                        Comp&eacute;tence<br>
+                                        <small class="text-muted">(Skill)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Total<br>
+                                        <small class="text-muted">(Total)</small>
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row">
+                                        Mat&eacute;riel : &Eacute;lectonique
+                                        <small class="text-muted">(Hardware: Electronics)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Infosec
+                                        <small class="text-muted">(Infosec)</small>
+                                    </th>
+                                    <td>40</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Interface
+                                        <small class="text-muted">(Interface)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Savoir : Comptabilit&eacute;
+                                        <small class="text-muted">(Know: Accounting)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Savoir : Psychologie
+                                        <small class="text-muted">(Know: Psychology)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Percevoir
+                                        <small class="text-muted">(Perceive)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Programmer
+                                        <small class="text-muted">(Program)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Recherche
+                                        <small class="text-muted">(Research)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Savoir :
+                                        <small class="text-muted">(Know:)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Savoir :
+                                        <small class="text-muted">(Know:)</small>
+                                    </th>
+                                    <td>30</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <hr class="my-4">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="mesh-WT" class="form-label">WT des n&oelig;uds</label>
+                                    <input type="text" class="form-control" id="mesh-WT" placeholder="Mesh WT" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid mesh WT is required.
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="mesh-DUR" class="form-label">DUR des n&oelig;uds</label>
+                                    <input type="text" class="form-control" id="mesh-DUR" placeholder="Mesh DUR" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid mesh DUR is required.
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="mesh-DR" class="form-label">DR des n&oelig;uds</label>
+                                    <input type="text" class="form-control" id="mesh-DR" placeholder="Mesh DR" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid mesh DR is required.
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="mesh-damage" class="form-label">D&eacute;g&acirc;ts sur les n&oelig;uds</label>
+                                    <input type="number" class="form-control" id="mesh-damage" placeholder="Mesh Damage" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid mesh damage is required.
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <label for="mesh-wounds" class="form-label">Blessures sur les n&oelig;uds</label>
+                                    <input type="number" class="form-control" id="mesh-wounds" placeholder="Mesh Wounds" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid mesh wounds is required.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="muse-notes" class="form-label">Notes</label>
+                                    <textarea class="form-control" id="muse-notes" placeholder="Notes" rows="15"></textarea>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="notes-id" role="tabpanel" aria-labelledby="notes-tab">
                         <div class="row py-5 px-5">
