--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -1276,7 +1276,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3 my-4">
-                                <label for="death-rating" class="form-label">Mort</label>
+                                <label for="death-rating" class="form-label">Seuil de mort</label>
                                 <input type="number" class="form-control" id="death-rating" placeholder="Death Rating" value="" required>
                                 <div class="invalid-feedback">
                                     Valid death rating is required.
